osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_random_bool/test_random_bool_validation_0.txt
error: invalid `percentage`
--> main.sml:1:26
     |
   1 | r = RandomBool(percentage=0.0)
     |                           ^ this will always be `False`